Fix visibility in Mozilla

--- a/1lvl/1lvl.css
+++ b/1lvl/1lvl.css
@@ -1,6 +1,5 @@
 body{
-    display: flex;
-    flex-direction: column;
+    display: block;
     background: no-repeat url("./bckgrnd.jpg");
     margin: 0;
 }
