--- a/3lvl/3lvl.css
+++ b/3lvl/3lvl.css
@@ -1,6 +1,5 @@
 body{
-    display: flex;
-    flex-direction: column;
+    display: block;
     background: no-repeat url("../1lvl/bckgrnd.jpg");
     margin: 0;
 }
