--- a/index.css
+++ b/index.css
@@ -1,6 +1,5 @@
 body{
-    display: flex;
-    flex-direction: column;
+    display: block;
     background: no-repeat url("../Find_Goslings_game/1lvl/bckgrnd.jpg");
     margin: 0;
 }
